cmake_minimum_required (VERSION 2.8)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
set(ASSIMP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")

project (Simple3DSkeletalAnimationLibrary)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -O3")

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.9)
        message(FATAL_ERROR "GCC version >=4.9 required.")
    endif()
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.4)
        message(FATAL_ERROR "Clang version >=3.4 required.")
    endif()
else()
    message(WARNING "Your compiler (${CMAKE_CXX_COMPILER_ID}) has not been tested on this project. Only Clang and GCC has been tested. Please report any problems at the project page on GitHub.")
endif()

find_package(SFML 2.1 COMPONENTS system window graphics REQUIRED)
message("SFML include dir: ${SFML_INCLUDE_DIR}")
message("SFML libraries: ${SFML_LIBRARIES}")
include_directories(${SFML_INCLUDE_DIR})

find_package(ASSIMP 3 REQUIRED)
message("AssImp include dir: ${ASSIMP_INCLUDE_DIR}")
message("AssImp libraries: ${ASSIMP_LIBRARIES}")
include_directories(${ASSIMP_INCLUDE_DIR})

find_package(OpenGL REQUIRED)
message("OpenGL include dir: ${OPENGL_INCLUDE_DIR}")
message("OpenGL libraries: ${OPENGL_LIBRARIES}")
include_directories(${OPENGL_INCLUDE_DIR})

find_package(Threads REQUIRED)
message("Threads libraries/flag: ${CMAKE_THREAD_LIBS_INIT}")

add_executable(sfml_examples sfml_examples.cpp)
target_link_libraries(sfml_examples ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(sfml_examples ${SFML_LIBRARIES})
target_link_libraries(sfml_examples ${ASSIMP_LIBRARIES})
target_link_libraries(sfml_examples ${OPENGL_LIBRARIES})
